# kst-course-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.md
docs/docs/api/: assessment.md  domain.md  estimation.md  interactive.md  learning.md  optimization.md  parser.md  prerequisites.md  rest-api.md  space.md  validation.md  viz.md
docs/docs/development/: api-quickstart.md  cli.md  contributing.md  examples.md  getting-started.md  testing-strategy.md
docs/docs/research/: bibliography.md  literature-review.md  novel-contributions.md
docs/docs/theory/: algorithmic-analysis.md  knowledge-assessment.md  knowledge-spaces.md  learning-spaces.md  optimization.md  surmise-relations.md
examples/: api_example.py  demo.ipynb  diamond-lattice.kst.yaml  intro-pandas.kst.yaml  large-domain.kst.yaml  linear-chain.kst.yaml
kst_core/: __init__.py  api.py  assessment.py  cli.py  domain.py  estimation.py  interactive.py  learning.py  optimization.py  parser.py  prerequisites.py  space.py  validation.py  viz.py
tests/: conftest.py  test_api.py  test_assessment.py  test_cli.py  test_domain.py  test_estimation.py  test_interactive.py  test_learning.py  test_optimization.py  test_parser.py  test_prerequisites.py  test_space.py  test_validation.py  test_viz.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/api/: client.ts  endpoints.ts  types.ts
ui/src/components/course-input/: CourseInputPanel.tsx  ExampleSelector.tsx  FileUpload.tsx  YamlEditor.tsx
ui/src/components/layout/: Header.tsx  Shell.tsx  Sidebar.tsx
ui/src/components/pages/: AssessPage.tsx  ExportPage.tsx  InfoPage.tsx  PathsPage.tsx  SimulatePage.tsx  ValidatePage.tsx
ui/src/components/shared/: Card.tsx  EmptyState.tsx  (+4 more)
ui/src/context/: CourseContext.tsx  courseContextDef.ts
ui/src/data/: examples.ts
ui/src/hooks/: useAssessment.ts  useCourse.ts
ui/src/lib/: courseTransform.ts
