[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kst-course-engine"
version = "0.1.0"
description = "Knowledge Space Theory Course Engine — formal mathematical structures for adaptive learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ulises Gonzalez", email = "ulises@example.com" },
]
keywords = ["knowledge-space-theory", "adaptive-learning", "antimatroid", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
    "networkx>=3.4",
    "numpy>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["kst_core"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "RUF001",  # ambiguous unicode in strings (mathematical symbols)
    "RUF002",  # ambiguous unicode in docstrings (mathematical symbols)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kst_core --cov-report=term-missing --cov-fail-under=100"
